# flexible_manipulation

./: .gitignore  CHANGELOG.rst  LICENSE  README.md
flexible_manipulation/: CMakeLists.txt  package.xml
flexible_manipulation_flexbe_states/: CMakeLists.txt  package.xml  setup.py
flexible_manipulation_flexbe_states/launch/: run_state_tests.launch
flexible_manipulation_flexbe_states/src/flexible_manipulation_flexbe_states/: apply_planning_scene_state.py  clear_octomap_state.py  determine_scan_motion_state.py  determine_waypoints_to_clean_state.py  execute_known_trajectory_state.py  get_cartesian_path_state.py  get_current_joint_values_list_state.py  get_current_joint_values_user_state.py  get_joint_names_from_move_group_state.py  get_joint_values_from_srdf_config_state.py  get_planning_scene_state.py  joint_values_to_move_action_state.py  joint_values_to_moveit_plan_state.py  joint_values_to_trajectory_state.py  move_group_state.py  moveit_extended_plan_endeffector_pose_state.py  query_planners_state.py  set_joint_trajectory_tolerances_state.py  setup_proxy_moveit_client_state.py  state_validation_state.py  trajectory_to_follow_joint_trajectory_action_state.py  user_data_to_move_action_state.py
flexible_manipulation_flexbe_states/src/flexible_manipulation_flexbe_states/proxy/: __init__.py  proxy_moveit_client.py
flexible_manipulation_flexbe_states/tests/: apply_planning_scene_state.test  clear_octomap_state.test  execute_known_trajectory_state.test  get_cartesian_path_state.test  get_current_joint_values_list_state.test  get_current_joint_values_user_state.test  get_joint_names_from_move_group_state.test  get_joint_values_from_srdf_config_state.test  get_planning_scene_state.test  joint_values_to_move_action_state.test  joint_values_to_moveit_plan_state.test  joint_values_to_trajectory_state.test  move_group_state.test  moveit_extended_plan_endeffector_pose_state.test  query_planners_state.test  set_joint_trajectory_tolerances_state.test  setup_proxy_moveit_client_state.test  state_validation_state.test  trajectory_to_follow_joint_trajectory_action_state.test  user_data_to_move_action_state.test
flexible_manipulation_moveit_capabilities/: CMakeLists.txt  flexible_manipulation_moveit_capabilities_plugin_description.xml  package.xml
flexible_manipulation_moveit_capabilities/include/flexible_manipulation_moveit_capabilities/helper/: collision_utils.h  constrained_motion_utils.h  continuous_plan_execution.h  group_utils.h  joint_constraint_utils.h  planning_scene_utils.h  robot_model_utils.h  trajectory_utils.h
flexible_manipulation_moveit_capabilities/src/default_capabilities/: apply_planning_scene_capability.cpp  apply_planning_scene_capability.h  clear_octomap_capability.cpp  clear_octomap_capability.h  execute_known_trajectory_capability.cpp  execute_known_trajectory_capability.h  get_cartesian_path_capability.cpp  get_cartesian_path_capability.h  get_planning_scene_capability.cpp  get_planning_scene_capability.h  kinematics_capability.cpp  kinematics_capability.h  move_group_plan_capability.cpp  move_group_plan_capability.h  query_planners_capability.cpp  query_planners_capability.h  state_validation_capability.cpp  state_validation_capability.h
flexible_manipulation_moveit_capabilities/src/extended_capabilities/: continuous_replanning_capability.cpp  continuous_replanning_capability.h  get_planning_group_config_action_capability.cpp  get_planning_group_config_action_capability.h  move_group_extended_action_capability.cpp  move_group_extended_action_capability.h  octomap_access_capability.cpp  octomap_access_capability.h
flexible_manipulation_moveit_capabilities/src/helper/: continuous_plan_execution.cpp
flexible_manipulation_msgs/: CMakeLists.txt  README.md  package.xml
flexible_manipulation_msgs/action/: ApplyPlanningScene.action  ClearOctomap.action  ExecuteKnownTrajectory.action  GetCartesianPath.action  GetMotionPlan.action  GetPlanningGroupConfig.action  GetPlanningScene.action  GetPositionFK.action  GetPositionIK.action  MoveGroupExtended.action  QueryPlanners.action  StateValidation.action
flexible_manipulation_msgs/include/flexible_manipulation_msgs/: constraints_conversion.h
flexible_manipulation_msgs/msg/: CollisionPair.msg  ExtendedPlanningOptions.msg  ExtendedPlanningResult.msg  ExtendedPlanningSceneDiff.msg  GetCartesianPathGoal.msg  JointAngles.msg  JointPositionConstraint.msg  PlannerConfiguration.msg  RotationKeyFrames.msg
