<?xml version="1.0"?>
<package format="2">
  <name>flexible_manipulation_msgs</name>
  <version>0.0.0</version>
  <description>The flexible_manipulation_msgs package</description>

  <maintainer email="robotics@cnu.edu">David Conner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
